[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AsyncAgentic"
version = "0.1.0"
description = "Async Agent Framework for OpenAI"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "termcolor>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/AsyncAgentic"]
